--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>美美学习网</title>
 <link href="css/main.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/setHomeSetFav.js"></script>
 </head>
@@ -19,7 +19,7 @@
 <div class="wrap">
     <div class="logo">
         <div class="logo_left">
-            <img src="images/logo.jpg" alt="慕课网">
+            <img src="images/logo.png" alt="美美学习网">
         </div>
         <div class="logo_right">
             <img src="images/tel.jpg" alt="服务热线">24小时服务热线:<span class="tel">123-456-7890</span>
@@ -31,7 +31,7 @@
             <div class="nav_mid_left">
                 <ul>
                     <li><a href="#">首页</a></li>
-                    <li><a href="list.html">关于慕课</a></li>
+                    <li><a href="list.html">关于美美</a></li>
                     <li><a href="list.html">新闻动态</a></li>
                     <li><a href="list.html">在线课程</a></li>
                     <li><a href="list.html">人才招聘</a></li>
@@ -53,12 +53,12 @@
             <h2>新闻中心</h2>
             <div class="xinwenleft_content">
                 <ul>
-                    <li><a href="#">公司新闻</a></li>
+                    <li><a href="#">美美新闻</a></li>
                     <li><a href="#">行业新闻</a></li>
                     <li><a href="#">媒体报道</a></li>
                     <li><a href="#">活动专题</a></li>
                     <li><a href="#">精彩视频</a></li>
-                    <li><a href="#">行业下载</a></li>
+                    <li><a href="#">视频下载</a></li>
                     <li><a href="#">公司内刊</a></li>
                 </ul>
             </div>
@@ -69,14 +69,14 @@
 
 
                 <ul>
-                    <li><a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span> </li>
-                    <li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span> </li>
-                    <li><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a><span>2014-05-30</span> </li>
-                    <li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span> </li>
-                    <li><a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span> </li>
-                    <li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span> </li>
-                    <li><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a><span>2014-05-30</span> </li>
-                    <li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span> </li>
+                    <li><a href="#">【美美访谈 用户篇】“有为屌丝”在路上</a><span>2016-06-01</span> </li>
+                    <li><a href="#">【有奖活动】给父亲的三行书信</a><span>2016-06-01</span> </li>
+                    <li><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a><span>2016-05-30</span> </li>
+                    <li><a href="#">【美美访谈】破茧成蝶——美女程序员的蜕变史</a><span>2016-05-28</span> </li>
+                    <li><a href="#">【美美访谈 用户篇】“有为屌丝”在路上</a><span>2016-06-01</span> </li>
+                    <li><a href="#">【有奖活动】给父亲的三行书信</a><span>2016-06-01</span> </li>
+                    <li><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a><span>2016-05-30</span> </li>
+                    <li><a href="#">【美美访谈】破茧成蝶——美女程序员的蜕变史</a><span>2016-05-28</span> </li>
                 </ul>
             </div>
             <div class="page">
