--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 <div class="wrap">
     <div class="logo">
         <div class="logo_left">
-            <img src="images/logo.jpg" alt="慕课网">
+            <img src="images/logo.jpg" alt="美美学习网">
         </div>
         <div class="logo_right">
             <img src="images/tel.jpg" alt="服务热线">24小时服务热线:<span class="tel">123-456-7890</span>
@@ -39,7 +39,7 @@
             <div class="nav_mid_left">
                <ul>
                     <li><a href="#">首页</a></li>
-                    <li><a href="list.html">关于慕课</a></li>
+                    <li><a href="list.html">关于美美</a></li>
                     <li><a href="list.html">新闻动态</a></li>
                     <li><a href="list.html">在线课程</a></li>
                     <li><a href="list.html">人才招聘</a></li>
@@ -69,7 +69,7 @@
                 <span class="title_right"><a href="#">More&gt;&gt;</a></span>
             </div>
             <div class="pic_news">
-                <img src="images/news.jpg"><h2><a href="#">520 慕女神喊你来表白！</a></h2>
+                <img src="images/news.jpg"><h2><a href="#">520 美女神喊你来表白！</a></h2>
                 <p>活动时间：5月20日—5月25日<br/>
                     获奖公布时间：5月26日<br>
                 <a href="#">Learn More&gt;&gt;</a>
@@ -77,10 +77,10 @@
             </div>
             <div class="news_list">
                 <ul>
-                    <li><a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span> </li>
+                    <li><a href="#">【美美访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span> </li>
                     <li><a href="#">【有奖活动】给父亲的三行书信</a><span>2014-06-01</span> </li>
                     <li><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a><span>2014-05-30</span> </li>
-                    <li><a href="#">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span> </li>
+                    <li><a href="#">【美美访谈】破茧成蝶——美女程序员的蜕变史</a><span>2014-05-28</span> </li>
                 </ul>
             </div>
         </div><!--news结束-->
